# Civic_Attestation_Platform

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  Dockerfile  LICENSE  README.md  SETUP_SUMMARY.md  docker-compose.yml  install.sh  pyproject.toml
apps/cap/: package.json  pytest.ini  requirements-dev.txt  requirements.txt
apps/cap/cap/: __init__.py  boot.py  hooks.py  modules.txt
apps/cap/cap/alerts/: __init__.py
apps/cap/cap/analytics/: metrics.py  reports.py
apps/cap/cap/backup/: evidence.py
apps/cap/cap/cache/: __init__.py  cache_decorators.py  cache_manager.py
apps/cap/cap/chat/: realtime.py  sessions.py
apps/cap/cap/cleanup/: sessions.py
apps/cap/cap/compliance/: check.py  engine.py  workflow.py
apps/cap/cap/custody/: chain.py
apps/cap/cap/doctype/alert_rule/: alert_rule.js  alert_rule.json  alert_rule.py
apps/cap/cap/doctype/audit_log/: audit_log.js  audit_log.json  audit_log.py
apps/cap/cap/doctype/chat_conversation/: chat_conversation.js  chat_conversation.json  chat_conversation.py
apps/cap/cap/doctype/chat_message/: __init__.py  chat_message.json  chat_message.py
apps/cap/cap/doctype/chat_session/: __init__.py  chat_session.js  chat_session.json  chat_session.py
apps/cap/cap/doctype/chat_session_policy/: __init__.py  chat_session_policy.json  chat_session_policy.py
apps/cap/cap/doctype/citation/: citation.js  citation.json  citation.py
apps/cap/cap/doctype/compliance_dashboard/: compliance_dashboard.js  compliance_dashboard.json  compliance_dashboard.py
apps/cap/cap/doctype/compliance_event/: compliance_event.js  compliance_event.json  compliance_event.py
apps/cap/cap/doctype/compliance_event_action/: compliance_event_action.json  compliance_event_action.py
apps/cap/cap/doctype/compliance_event_finding/: compliance_event_finding.json  compliance_event_finding.py
apps/cap/cap/doctype/compliance_event_participant/: compliance_event_participant.json  compliance_event_participant.py
apps/cap/cap/doctype/evidence/: evidence.js  evidence.json  evidence.py
apps/cap/cap/doctype/evidence_attachment/: evidence_attachment.json  evidence_attachment.py
apps/cap/cap/doctype/evidence_chain/: evidence_chain.js  evidence_chain.json  evidence_chain.py
apps/cap/cap/doctype/evidence_chain_custody/: evidence_chain_custody.json
apps/cap/cap/doctype/evidence_chain_item/: evidence_chain_item.json
apps/cap/cap/doctype/evidence_citation_link/: evidence_citation_link.json  evidence_citation_link.py
apps/cap/cap/doctype/evidence_custody_entry/: evidence_custody_entry.json  evidence_custody_entry.py
apps/cap/cap/doctype/evidence_message_link/: evidence_message_link.json  evidence_message_link.py
apps/cap/cap/doctype/evidence_policy_link/: evidence_policy_link.json  evidence_policy_link.py
apps/cap/cap/doctype/ledger_event/: ledger_event.json  (+1 more)
apps/cap/cap/ledger/: __init__.py  anchor.py  events.py
apps/cap/cap/maintenance/: cleanup.py
apps/cap/cap/monitoring/: __init__.py  health.py
apps/cap/cap/observability/: __init__.py  logger.py  metrics.py  tracer.py
apps/cap/cap/permissions/: __init__.py  tenant.py
apps/cap/cap/realtime/: heartbeat.py
apps/cap/cap/reports/: daily.py
apps/cap/cap/repositories/: __init__.py  base_repository.py
apps/cap/cap/services/: __init__.py  auth_service.py  base_service.py  tenant_service.py
apps/cap/cap/setup/: __init__.py  install.py
apps/cap/cap/tests/: __init__.py  conftest.py
apps/cap/cap/utils/: __init__.py  tenant.py
apps/cap/docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  USE_CASE_SCENARIOS.md  WORKFLOWS_DOCUMENTATION.md
apps/cap/docs/api/: README.md
apps/cap/docs/architecture/: README.md
apps/cap/docs/deployment/: README.md
apps/cap/docs/guides/: development.md  testing.md
apps/cap/translations/: README.md  ar.csv  en.csv  es.csv  fr.csv  glossary.csv
scripts/: setup.sh
(+94 files in other folders)
